--- a/homework/Homework-1/flask_app/templates/home.html
+++ b/homework/Homework-1/flask_app/templates/home.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento|Quintessential" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="CSE 477 HW 1 Home Page">
+    <meta name="description" content="CSE 477 HW 1">
     <meta name="author" content="Tyler White">
-    <title></title>
+    
   </head>
   <body>
   <!--- Header Section --->
